<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".CounterViewer">

<LinearLayout android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date: "
            android:textSize="@dimen/big_gap"
    />
    <EditText
            android:id="@+id/et_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="dd/mm/yyyy"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Time: "
            android:textSize="@dimen/big_gap"
    />
    <EditText
            android:id="@+id/et_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:hint="hh:mm"
    />
</LinearLayout>

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/big_gap"
>
    <EditText
            android:id="@+id/et_team_A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="Name Team A"
            android:textStyle="bold"/>

    <EditText
            android:id="@+id/et_team_B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="Name Team B"
            android:textStyle="bold"/>

    <Button
            android:id="@+id/btn_addInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add"
            android:layout_gravity="center"
    />
</LinearLayout>

    <TextView
            android:id="@+id/tv_winner"
            android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="Winner"
              android:textSize="@dimen/big_text"
              android:gravity="center"
              android:textColor="@color/win"
    />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="498dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/small_gap"
            android:layout_weight="1">


        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/medium_gap"
                android:layout_weight="1"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tv_team_A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_team_a"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
            />


            <TextView
                    android:id="@+id/tv_score_team_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_gap"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="@dimen/big_text"

            />


            <Button
                    android:id="@+id/bt_team_a_3_p"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_gap"
                    android:onClick="addThreeTeamA"
                    android:text="@string/action_3_points"/>

            <Button
                    android:id="@+id/bt_team_a_2_p"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_gap"
                    android:onClick="addTwoTeamA"
                    android:text="@string/action_2_points"/>

            <Button
                    android:id="@+id/bt_team_a_free_throw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_gap"
                    android:onClick="addOneTeamA"
                    android:text="@string/action_free_throw"/>

        </LinearLayout>

        <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/medium_gap"
                android:layout_marginTop="@dimen/medium_gap"
                android:layout_marginRight="@dimen/medium_gap"
                android:background="#D8D4D4"/>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/medium_gap"
                android:layout_weight="1"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/tv_team_B"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text_team_b"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
            />

            <TextView
                    android:id="@+id/tv_score_team_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_gap"
                    android:gravity="center"
                    android:text="0"
                    android:textSize="@dimen/big_text"/>

            <Button
                    android:id="@+id/bt_team_b_3_p"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_gap"
                    android:onClick="addThreeTeamB"
                    android:text="@string/action_3_points"/>

            <Button
                    android:id="@+id/bt_team_b_2_p"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_gap"
                    android:onClick="addTwoTeamB"
                    android:text="@string/action_2_points"/>

            <Button
                    android:id="@+id/bt_team_b_free_throw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_gap"
                    android:onClick="addOneTeamB"
                    android:text="@string/action_free_throw"/>

        </LinearLayout>

    </LinearLayout>

    <Button
            android:id="@+id/btn_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/medium_gap"
            android:layout_marginBottom="@dimen/medium_gap"
            android:text="@string/action_reset" />

</LinearLayout>